# raytracer

./: CMakeLists.txt  Cargo.toml  README.md
src/: CMakeLists.txt  canvas.cpp  canvas.rs  main.cpp  main.rs  projectile.cpp  projectile.rs  raytracer.rs  tuple.rs
src/ray_tracer/: CMakeLists.txt  canvas.cpp  canvas.h  tracer_math.cpp  tracer_math.h
src/tests/: canvas.rs  tuple.rs
src/tuple/: tests.rs
test/: CMakeLists.txt  tracer_math_test.cpp
test/src/: canvas_test.cpp  tracer_math_test.cpp
