[package]
name = "the_ray_tracer_challenge-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"

[lib]
name = "raytracer"
path = "src/raytracer.rs"

[[bin]]
name = "projectile"
path = "src/projectile.rs"

